testdata/baselines/reference/submodule/compiler/moduleResolutionWithExtensions_notSupported.errors.txt
/a.ts(1,17): error TS2306: File '/tsx.tsx' is not a module.
/a.ts(2,17): error TS2307: Cannot find module './jsx' or its corresponding type declarations.
/a.ts(3,16): error TS2307: Cannot find module './js' or its corresponding type declarations.


==== /a.ts (3 errors) ====
    import tsx from "./tsx"; // Not allowed.
                    ~~~~~~~
!!! error TS2306: File '/tsx.tsx' is not a module.
    import jsx from "./jsx"; // Not allowed.
                    ~~~~~~~
!!! error TS2307: Cannot find module './jsx' or its corresponding type declarations.
    import js from "./js"; // OK because it's an untyped module.
                   ~~~~~~
!!! error TS2307: Cannot find module './js' or its corresponding type declarations.
    